CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(nyanttp C)

LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)

# Compile as C99
FIND_PACKAGE(C99 REQUIRED)
SET(CMAKE_C_FLAGS ${C99_C_FLAGS})

SET(NY_VERSION_MAJOR 0)
SET(NY_VERSION_MINOR 0)
SET(NY_VERSION_MICRO 0)

SET(NY_VERSION "${NY_VERSION_MAJOR}.${NY_VERSION_MINOR}.${NY_VERSION_MICRO}")

SET(LIB_INSTALL_DIR "lib" CACHE PATH
	"Installation directory for libraries")
SET(BIN_INSTALL_DIR "bin" CACHE PATH
	"Installation directory for executables")
SET(INCLUDE_INSTALL_DIR "include" CACHE PATH
	"Installation directory for header files")

# Enable POSIX and XSI extensions on Linux
ADD_DEFINITIONS(-D_XOPEN_SOURCE=700)

CONFIGURE_FILE(
	"${PROJECT_SOURCE_DIR}/config.h.in"
	"${PROJECT_BINARY_DIR}/config.h")

CONFIGURE_FILE(
	"${PROJECT_SOURCE_DIR}/nyanttp.pc.in"
	"${PROJECT_BINARY_DIR}/nyanttp.pc" @ONLY)

CONFIGURE_FILE(
	"${PROJECT_SOURCE_DIR}/nyanttp/ny.h.in"
	"${PROJECT_BINARY_DIR}/nyanttp/ny.h")

INCLUDE_DIRECTORIES("${PROJECT_BINARY_DIR}")

SET(NY_SOURCES ny.c error.c alloc.c tcp.c) # http.c
FILE(GLOB NY_HEADERS "nyanttp/*.h")

ADD_LIBRARY(ny-static STATIC ${NY_SOURCES})
SET_TARGET_PROPERTIES(ny-static PROPERTIES
	PUBLIC_HEADER "${NY_HEADERS}"
	OUTPUT_NAME "ny"
	PREFIX "lib")

ADD_LIBRARY(ny-shared SHARED ${NY_SOURCES})
SET_TARGET_PROPERTIES(ny-shared PROPERTIES
	OUTPUT_NAMe "ny"
	VERSION "${NY_VERSION}"
	SOVERSION "${NY_VERSION_MAJOR}")

INSTALL(TARGETS ny-static ny-shared
	RUNTIME DESTINATION "${BIN_INSTALL_DIR}"
	LIBRARY DESTINATION "${LIB_INSTALL_DIR}"
	ARCHIVE DESTINATION "${LIB_INSTALL_DIR}"
	PUBLIC_HEADER DESTINATION "${INCLUDE_INSTALL_DIR}/${PROJECT_NAME}")
