AC_PREREQ([2.60])
AC_INIT([ny], [0.0.0], [mvs@nyantec.com])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_SRCDIR([ny.c])
AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE([foreign])

AC_PROG_CC_STDC
AC_PROG_LN_S
AC_PROG_INSTALL
AC_PROG_LIBTOOL
AX_AM_JOBSERVER

AC_HEADER_ASSERT
AC_HEADER_STDC

AC_TYPE_SIZE_T
AC_TYPE_UINT8_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINTPTR_T

AC_C_CONST
AC_C_RESTRICT

AX_CFLAGS_NO_WRITABLE_STRINGS

AX_PTHREAD
CC="$PTHREAD_CC"
CFLAGS="$PTHREAD_CFLAGS $CFLAGS"
LIBS="$PTHREAD_LIBS $LIBS"

AX_LIB_EV

PKG_CHECK_MODULES([check], [check])

AC_FUNC_MMAP
AC_FUNC_STRERROR_R

AC_CONFIG_FILES([Makefile test/Makefile])
AC_OUTPUT
