AC_PREREQ([2.60])
AC_INIT([nyanttp], NY_GIT_VERSION, [mvs@nyantec.com])

AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_SRCDIR([ny.c])
AC_CONFIG_HEADERS([config.h])
AH_BOTTOM([#include "ny_config.h"])

AC_CANONICAL_TARGET
AX_ENABLE_BUILDDIR([$target])
AM_INIT_AUTOMAKE([foreign tar-pax dist-xz no-dist-gzip])

AX_SPLIT_VERSION([AC_PACKAGE_VERSION])
AC_SUBST([NY_VERSION_MAJOR], $AX_MAJOR_VERSION)
AC_SUBST([NY_VERSION_MINOR], $AX_MINOR_VERSION)
AC_SUBST([NY_VERSION_MICRO], $AX_POINT_VERSION)
AC_SUBST([NY_VERSION_BUILD], NY_GIT_BUILD)

AC_PROG_CC([clang gcc cl cc])
AC_PROG_CC_STDC
AC_PROG_LN_S
AC_PROG_INSTALL
AC_PROG_LIBTOOL
AX_AM_JOBSERVER

AC_SYS_LARGEFILE
AC_DEFINE([_XOPEN_SOURCE], [700], [Expose POSIX and XSI extensions.])
AC_DEFINE([_GNU_SOURCE], [1], [Expose GNU extensions.])

AC_SEARCH_LIBS([socket], [socket nsl])
AC_SEARCH_LIBS([getaddrinfo], [socket nsl])

AC_HEADER_ASSERT
AC_HEADER_STDC

AC_TYPE_SIZE_T
AC_TYPE_UINT8_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINTPTR_T
AX_TYPE_SOCKLEN_T

AC_C_RESTRICT

AX_CFLAGS_NO_WRITABLE_STRINGS
AX_CFLAGS_WARN_ALL

AX_LIB_EV

AC_FUNC_FORK
AC_FUNC_MMAP
AC_FUNC_STRERROR_R
AC_CHECK_DECLS([MAP_ANONYMOUS, MAP_ANON], [], [], [#include <sys/mman.h>])
AC_CHECK_FUNCS([accept4 mprotect posix_madvise])

AC_CONFIG_FILES([
	Makefile
	nyanttp.pc
	nyanttp/Makefile
	nyanttp/ny.h
	test/Makefile
])
AC_OUTPUT
